--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.2",
     "firebase": "^10.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -19,8 +20,10 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
+    "react-toggle-dark-mode": "^1.1.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.7.32",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
